# openaimtrainer-frontend

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
assets/: wall_shader.frag  wall_shader.vert
scenarios/gridshot/: info.toml  script.lua
src/: audio.c  audio.h  clay_renderer_raylib.c  clay_renderer_raylib.h  config.c  config.h  lato.c  lato.h  lighting.frag  login_screen.c  login_screen.h  lua_api_v1_0.c  lua_api_v1_0.h  lua_interface.c  lua_interface.h  main.c  main_menu.c  main_menu.h  model.c  model.h  network.c  network.h  post_scenario.c  post_scenario.h  save_scores.c  save_scores.h  scenario_select.c  scenario_select.h  settings.c  settings.h  settings_common.c  settings_common.h  shader.c  shader.h  status_bar.c  status_bar.h  target.h  ui.c  ui.h  ui_utils.c  (+1 more)
toolchains/: Linux.cmake  Windows.cmake
